--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ color:darkgrey;
   }
   .mdl-navigation.icons{
 margin-top: 34px;
+margin-right: 2%;
   }
   .mdh-expandable-search form {
     max-width: 600px;
