--- a/style.css
+++ b/style.css
@@ -20,6 +20,103 @@ color:darkgrey;
 .mdl-layout__header-row .mdl-navigation__link{
     padding:0 10px !important;
 }
+.mdl-layout__drawer-right {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  width: 240px;
+  height: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  box-sizing: border-box;
+  border-right: 1px solid #e0e0e0;
+  background: #fcfbf9;
+  -webkit-transform: translateX(250px);
+  -ms-transform: translateX(250px);
+  transform: translateX(250px);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  will-change: transform;
+  -webkit-transition-duration: .2s;
+  transition-duration: .2s;
+  -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+  color: #424242;
+  overflow: visible;
+  overflow-y: auto;
+  z-index: 5;
+}
+
+.active {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);  
+}
+
+.listMenu{
+  list-style-type: none;
+  text-transform: uppercase;
+              font-size: 0.75em;
+}
+.mdl-layout__obfuscator-right {
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 4;
+  visibility: hidden;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: .2s;
+  transition-duration: .2s;
+  -webkit-transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  overflow: hidden;
+  overflow-y: scroll !important;
+  position: fixed;
+  width: 100%;
+}
+
+.ob-active {
+  background-color: rgba(0,0,0,.5);
+  visibility: visible;
+}
+.feedback {
+  background-color :#24a21e;
+  color: white;
+  padding: 0 25px !important;
+  height: 54px !important;
+  border-radius: 2px;
+  font-size: 110% !important;
+  border-color: #24a21e;
+}
+
+#mybutton {
+  position: fixed;
+  bottom: 15px;
+  right: 20px;
+}
+.demo-drawer.mdl-layout__drawer-right>.mdl-layout-title {
+  line-height: 56px;
+  text-align: right;
+  padding-right: 16px;
+}
 .mdh-expandable-search {
     margin: 0 20px;
     align-items: center;
