--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ color:darkgrey;
   position: fixed;
   bottom: 15px;
   right: 20px;
+  z-index: 1;
 }
 .demo-drawer.mdl-layout__drawer-right>.mdl-layout-title {
   line-height: 56px;
@@ -269,5 +270,8 @@ margin-right: 2%;
       }
       .infoCard{
         margin-left: 15px !important;
+      }
+      #mybutton{
+        display: none !important;
       }
 }
